--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["MultiSimo_Group"]
 version = "1.0.0-DEV"
 
 [deps]
+AlgebraicMultigrid = "2169fc97-5a83-5252-b627-83903c6c433c"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Gmsh = "705231aa-382f-11e9-3f0c-b7cb4346fdeb"
@@ -11,6 +12,7 @@ Gridap = "56d4f2e9-7ea1-5844-9cf6-b9c51ca7ce8e"
 GridapDistributed = "f9701e48-63b3-45aa-9a63-9bc6c271f355"
 GridapGmsh = "3025c34a-b394-11e9-2a55-3fee550c04c8"
 GridapPETSc = "bcdc36c2-0c3e-11ea-095a-c9dadae499f1"
+IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
