new example with periodic bcs

--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,8 @@
+name = "Mimosa"
+uuid = "ddbf423a-3df4-409e-9685-3dc416cae46c"
+authors = ["MultiSimo_Group"]
+version = "1.0.0-DEV"
+
 [deps]
 AlgebraicMultigrid = "2169fc97-5a83-5252-b627-83903c6c433c"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
