--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ GridapPETSc = "bcdc36c2-0c3e-11ea-095a-c9dadae499f1"
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
 Nonconvex = "01bcebdf-4d21-426d-b5c4-6132c1619978"
 NonconvexNLopt = "b43a31b8-ff9b-442d-8e31-c163daa8ab75"
 Preconditioners = "af69fa37-3177-5a40-98ee-561f696e4fcd"
