--- a/Project.toml
+++ b/Project.toml
@@ -22,5 +22,6 @@ Nonconvex = "01bcebdf-4d21-426d-b5c4-6132c1619978"
 NonconvexNLopt = "b43a31b8-ff9b-442d-8e31-c163daa8ab75"
 Preconditioners = "af69fa37-3177-5a40-98ee-561f696e4fcd"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
