--- a/Project.toml
+++ b/Project.toml
@@ -4,24 +4,16 @@ authors = ["MultiSimo_Group"]
 version = "1.0.0-DEV"
 
 [deps]
-AlgebraicMultigrid = "2169fc97-5a83-5252-b627-83903c6c433c"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
-ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Gmsh = "705231aa-382f-11e9-3f0c-b7cb4346fdeb"
 Gridap = "56d4f2e9-7ea1-5844-9cf6-b9c51ca7ce8e"
-GridapEmbedded = "8838a6a3-0006-4405-b874-385995508d5d"
 GridapGmsh = "3025c34a-b394-11e9-2a55-3fee550c04c8"
-GridapPETSc = "bcdc36c2-0c3e-11ea-095a-c9dadae499f1"
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
-LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
-Nonconvex = "01bcebdf-4d21-426d-b5c4-6132c1619978"
-NonconvexNLopt = "b43a31b8-ff9b-442d-8e31-c163daa8ab75"
-Preconditioners = "af69fa37-3177-5a40-98ee-561f696e4fcd"
-Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+PProf = "e4faabce-9ead-11e9-39d9-4379958e3056"
+ProfileCanvas = "efd6af41-a80b-495e-886c-e51b0c7d77a3"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
-Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
