--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ GridapGmsh = "3025c34a-b394-11e9-2a55-3fee550c04c8"
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 PProf = "e4faabce-9ead-11e9-39d9-4379958e3056"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProfileCanvas = "efd6af41-a80b-495e-886c-e51b0c7d77a3"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
