--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ data/sims/
 /data/JLD2_Fields
 /data/VS_Workspaces
 /data/Figs
+data/ph_EM_TB_St4_Sl2_3.jld2
+data/ph_EM_TB_St4_Sl2_1.jld2
+data/ph_EM_TB_St4_Sl2_2.jld2
+data/ph_EM_TB_St4_Sl2_4.jld2
+data/uh_EM_PB_10S_1x.jld2
