--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ data/ph_EM_TB_St4_Sl2_1.jld2
 data/ph_EM_TB_St4_Sl2_2.jld2
 data/ph_EM_TB_St4_Sl2_4.jld2
 data/uh_EM_PB_10S_1x.jld2
+results_MB.vtu
