Ignore csv folder

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ results_MB.vtu
 data/csv/TubeBeam_ϕ2000.0_St4_St4_0_0_0_0_1_1_1_0_0_0_0_0_0_0_0_0/_Λ_0_2_TIME_1.csv
 /data/csv/TubeBeam_ϕ2000.0_St4_St4_0_0_0_0_1_1_1_0_0_0_0_0_0_0_0_0
 /data/csv/TubeBeam_ϕ5000.0_St4_St4_0_0_0_0_1_1_1_0_0_0_0_0_0_0_0_0
+/data/csv
