--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ data/csv/TubeBeam_ϕ2000.0_St4_St4_0_0_0_0_1_1_1_0_0_0_0_0_0_0_0_0/_Λ_0_2_TIME_
 /data/csv/TubeBeam_ϕ2000.0_St4_St4_0_0_0_0_1_1_1_0_0_0_0_0_0_0_0_0
 /data/csv/TubeBeam_ϕ5000.0_St4_St4_0_0_0_0_1_1_1_0_0_0_0_0_0_0_0_0
 /data/csv
+/Mimosa_TestRunApp_0
