--- a/Project.toml
+++ b/Project.toml
@@ -16,11 +16,13 @@ GridapGmsh = "3025c34a-b394-11e9-2a55-3fee550c04c8"
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 Kaleido_jll = "f7e6163d-2fa5-5f23-b69c-1db539e41963"
+LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 PProf = "e4faabce-9ead-11e9-39d9-4379958e3056"
 PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
+PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 ProfileCanvas = "efd6af41-a80b-495e-886c-e51b0c7d77a3"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
