--- a/DataEngineering/Project.toml
+++ b/DataEngineering/Project.toml
@@ -23,5 +23,10 @@ NonconvexNLopt = "b43a31b8-ff9b-442d-8e31-c163daa8ab75"
 Preconditioners = "af69fa37-3177-5a40-98ee-561f696e4fcd"
 QuasiMonteCarlo = "8a4e6c94-4038-4cdc-81c3-7e6ffdb2a71b"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
+
+[compat]
+Gridap = "0.17.21"
+Statistics = "1.11.1"
