--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ data/Sensitibity_to_TSsize_300+64.jdl2
 data/Sensitibity_to_TSsize_400+64.jdl2
 data/Sensitibity_to_TSsize_500+64.jdl2
 data/Sensitibity_to_TSsize_600+64.jdl2
+data/BPSO_multipleresults.jdl2
