--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ Kaleido_jll = "f7e6163d-2fa5-5f23-b69c-1db539e41963"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NearestNeighbors = "b8a86587-4115-5ab1-83bc-aa920d37bbce"
+NumericalIntegration = "e7bfaba1-d571-5449-8927-abc22e82249b"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 PProf = "e4faabce-9ead-11e9-39d9-4379958e3056"
 PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
